# ermbg

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  README.md  clean_transparent_matting_engineering_plan.md  ermbg.config.json  pyproject.toml
comfy_nodes/: README.md  __init__.py  ermbg_nodes.py
docs/: README.md  architecture.md  comfy-ermbg-development.md  corridorkey-game-ui-plan.md  corridorkey-semantic-paths.md  ermbg-route-strategy.md  eval-gallery.md  game-eval-qwen-gw-standard.md  install-startup.md  known-b-candidate-matting.md  local-ownership.md  sample-12-white-bg-panel-analysis.md  solid-bg-graphic-plan.md
ermbg/: __init__.py  alpha.py  analyze.py  api.py  artifacts.py  candidates.py  cli.py  colorspace.py  comfy.py  corridorkey.py  corridorkey_hint.py  corridorkey_runner.py  despill.py  diagnose.py  direct_worker.py  direct_worker_client.py  direct_worker_server.py  executor.py  foreground.py  io.py  keyer.py  known_bg_glow.py  known_bg_hard_ui.py  lightwrap.py  local_ownership.py  matting.py  metrics.py  ownership.py  pipeline_contracts.py  planner.py  preprocess.py  pymatting_refine.py  qa.py  recover.py  risk.py  router.py  runtime_capabilities.py  segmenter.py  settings.py  shadow.py  (+9 more)
examples/: quickstart.py
scripts/: 01_smoke_segment.py  02_phase1_probe_eval.py  03_rmbg_baseline.py  04_subject_mask_regression.py  05_comfy_subject_mask_workflow.py  06_risk_overlay.py  07_vlm_planner_debug.py  08_qwen_subject_mask_batch.py  09_game_eval_qwen_batch.py  10_local_ownership_batch.py  benchmark_direct_worker_path.py  generate_eval_gallery.py  (+13 more)
(+239 files in other folders)
